compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__module_could_not_unify9.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 763
expression: "fn main() { let assert [1, 2, ..x]: List(String) = [1,2,3] x }"
snapshot_kind: text
---
----- SOURCE CODE
fn main() { let assert [1, 2, ..x]: List(String) = [1,2,3] x }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:52
  │
1 │ fn main() { let assert [1, 2, ..x]: List(String) = [1,2,3] x }
  │                                                    ^^^^^^^

Expected type:

    List(String)

Found type:

    List(Int)
