compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__no_crash_on_duplicate_definition.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2195
expression: "\npub type Wibble {\n  Wobble\n  Wobble\n}\n\npub fn main() {\n  let wibble = Wobble\n  case wibble {\n    Wobble -> Nil\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble {
  Wobble
  Wobble
}

pub fn main() {
  let wibble = Wobble
  case wibble {
    Wobble -> Nil
  }
}


----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.gleam:4:3
  │
3 │   Wobble
  │   ------ First defined here
4 │   Wobble
  │   ^^^^^^ Redefined here

`Wobble` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
