compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__no_crash_on_duplicate_definition2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2215
expression: "\npub type Wibble {\n  Wibble\n  Wobble\n  Wobble\n  Wubble\n}\n\npub fn main() {\n  let wibble = Wobble\n  case wibble {\n    Wibble -> Nil\n    Wobble -> Nil\n    Wubble -> Nil\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble {
  Wibble
  Wobble
  Wobble
  Wubble
}

pub fn main() {
  let wibble = Wobble
  case wibble {
    Wibble -> Nil
    Wobble -> Nil
    Wubble -> Nil
  }
}


----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.gleam:5:3
  │
4 │   Wobble
  │   ------ First defined here
5 │   Wobble
  │   ^^^^^^ Redefined here

`Wobble` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
