compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__no_crash_on_duplicate_record_fields.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2494
expression: "\npub type X {\n  A\n  B(e0: Int, e0: Int)\n}\n\nfn compiler_crash(x: X) {\n  case x {\n    A -> todo\n    _ -> todo\n  }\n}\n  "
snapshot_kind: text
---
----- SOURCE CODE

pub type X {
  A
  B(e0: Int, e0: Int)
}

fn compiler_crash(x: X) {
  case x {
    A -> todo
    _ -> todo
  }
}
  

----- ERROR
error: Duplicate label
  ┌─ /src/one/two.gleam:4:14
  │
4 │   B(e0: Int, e0: Int)
  │              ^^

The label `e0` has already been defined. Rename this label.
